fixed blog image on mobile screen

--- a/styles/Posts.module.css
+++ b/styles/Posts.module.css
@@ -28,3 +28,12 @@
   align-items: center;
   width: 100%;
 }
+
+@media (max-width: 426px) {
+  .image {
+    width: 300px;
+    height: 300px;
+    margin-top: 100px;
+    margin-bottom: 20px;
+  }
+}
